# reffit

./: .#README.md  .gitignore  README.md  cabal.project  configuration.nix  default.nix  deployment.txt  overrides-ghc.nix  reffit.cabal  release.nix  shell.nix  site_key.txt
exec/: AcidToSQL.hs  reset.sh
hcar/: reffit.tex
nix/: nixpkgs.nix
scripts/: acidToSQL.hs  createReffitTables.sql  dropReffitTables.sql
snaplets/heist/templates/: _article_view.tpl  _community_stats.tpl  _discussion_form.tpl  _edit_profile.tpl  _filter_settings.tpl  _index.tpl  _login.tpl  _new_doc_class.tpl  _new_paper.tpl  _new_password.tpl  _new_user.tpl  _paper_roll.tpl  _paper_roll_paper.tpl  about.tpl  alpha_warning.tpl  articleCriticisms.tpl  article_view.tpl  base.tpl  caught_logout.tpl  critique.tpl  discussion.tpl  discussionTry2.tpl  discussion_point.tpl  header.tpl  index.tpl  nav.tpl  new_critique.tpl  new_discussion_link.tpl  new_doc_class.tpl  new_o_comment.tpl  new_paper.tpl  new_summary.tpl  o_comment.tpl  paperBlock.tpl  paper_roll.tpl  prose.tpl  reset_request.tpl  score_block.tpl  splashscreen.tpl  summaries.tpl  (+9 more)
snaplets/postgresql-simple/: devel.cfg
sql/: addFakeData.sql  createReffitTables.sql  document.sql  documentViews.sql  dropReffitTables.sql  hashtag.sql  news.sql  user.sql  userViews.sql
sql/fakedata/: all.sql  comments.csv  documentAuthors.csv  documentUrls.csv  documents.csv  emailAddys.csv  hashTagMentions.csv  hashTags.csv  publicVotes.csv  reffitUsers.csv  reset.sql  userFollowers.csv  votes.csv
src/: Application.hs  Site.hs  backupTypes.hs
src/Reffit/: AcidTypes.hs  CrossRef.hs  DataVersion.hs  Discussion.hs  DocAuthor.hs  DocWebTypes.hs  Document.hs  FieldTag.hs  Filter.hs  Handlers.hs  HashTag.hs  Markdown.hs  Model.hs  OverviewComment.hs  PaperRoll.hs  PersistentTypes.hs  Scores.hs  Search.hs  Sort.hs  Types.hs  User.hs
src/Reffit/Handlers/: Document.hs  HandleAuthentication.hs  HandleDiscussion.hs  HandleIndex.hs  HandleNewCritique.hs  HandleNewDocClass.hs  HandleNewOComment.hs  HandleNewPaper.hs  HandleNewSummary.hs  HandlePasswordReset.hs  HandleSummaryVote.hs  HandleUpdateProfile.hs  HandleViewPaper.hs  HandleViewUser.hs  Helpers.hs  Search.hs  Serialize.hs
src/Reffit/Server/: Application.hs
src/Util/: Mailgun.hs  ReffitMigrate.hs  Snap.hs  UsersJsonToSQL.hs
src/handlers/: HandleIndex.hs  HandleNewCritique.hs  HandleNewDocClass.hs  HandleNewPaper.hs  HandleNewSummary.hs  HandleSummaryVote.hs  HandleViewDiscussion.hs  HandleViewPaper.hs  HandleViewUser.hs  PaperRoll.hs
static/: screen.css
static/media/css/: article_view.css  nav.css  screen.css  tree.css
static/media/js/: doi.js  tree.hs  tree.js
test/: TestSuite.hs
