Name:                reffit
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Application,
    Reffit.AcidTypes,
    Reffit.CrossRef,
    Reffit.Discussion,
    Reffit.DocAuthor,
    Reffit.Document,
    Reffit.FieldTag,
    Reffit.Filter,
    Reffit.Handlers,
    Reffit.Handlers.Document,
    Reffit.Handlers.HandleAuthentication,
    Reffit.Handlers.HandleDiscussion,
    Reffit.Handlers.HandleIndex,
    Reffit.Handlers.HandleNewDocClass,
    Reffit.Handlers.HandleNewOComment,
    Reffit.Handlers.HandleNewPaper,
    Reffit.Handlers.HandleNewSummary,
    Reffit.Handlers.HandleSummaryVote,
    Reffit.Handlers.HandleViewPaper,
    Reffit.Handlers.HandleViewUser,
    Reffit.HashTag,
    Reffit.OverviewComment,
    Reffit.PaperRoll,
    Reffit.Scores,
    Reffit.Search,
    Reffit.Sort,
    Reffit.Types,
    Reffit.User
    Site
  other-modules:
    Util.ReffitMigrate

  build-depends:    
    base >= 4.4 && < 5,
    acid-state,
    aeson,
    blaze-html,
    bytestring,
    cereal,
    containers,
    digestive-functors-blaze,
    digestive-functors,
    digestive-functors-heist,
    digestive-functors-snap,
    errors,
    hashable,
    haskell-src-exts >= 1.14.0 && < 1.17,
    haskell-src-meta,
    heist,
    HTTP,
    lens        >= 4.0,
    lens-aeson,
    MonadCatchIO-transformers,
    mtl,
    network,
    network-uri,
    postgresql-simple,
    safe,
    safecopy,
    snap >= 1,
    snap-core,
    snap-extras,
    snap-server,
    snap-loader-static,
    snaplet-acid-state,
    snaplet-postgresql-simple,
    text,
    text-icu,
    time >= 1.5 && < 1.6,
    transformers,
    transformers-compat,
    unordered-containers,
    xmlhtml >= 0.1


Executable reffit
  default-language: Haskell2010
  hs-source-dirs: exec
  main-is: Reffit.hs
  build-depends:    
    base >= 4.4 && < 5,
    acid-state,
    transformers-compat,
    errors,
    reffit,
    snap,
    snap-core,
    snap-server,
    snap-loader-static,
    text


executable acidToSQL
  default-language: Haskell2010
  hs-source-dirs: exec
  main-is:        AcidToSQL.hs
  other-modules:  Util.UsersJsonToSQL
  build-depends: 
    base >= 4.4 && < 5,
    cereal,
    containers,
    acid-state,
    safecopy,
    hashable,
    aeson,
    unordered-containers,
    reffit,
    bytestringa,
    text,
    time,
    lens        >= 4.0,
    lens-aeson,
    postgresql-simple

Test-suite testsuite
  default-language: Haskell2010
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  ghc-options: -fhpc
  build-depends:
    base >= 4.4 && < 5,
    blaze-html,
    acid-state,
    aeson,
    bytestring,
    cereal,
    containers,
    digestive-functors,
    digestive-functors-blaze,
    digestive-functors-heist,
    digestive-functors-snap,
    errors,
    hashable,
    heist,
    HUnit,
    lens        >= 4.0,
    lens-aeson,
    MonadCatchIO-transformers,
    mtl,
    postgresql-simple,
    QuickCheck,
    reffit,
    safe,
    safecopy,
    snap-extras,
    snaplet-acid-state,
    snaplet-postgresql-simple,
    snap,
    snap-core,
    snap-server,
    snap-loader-static,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    text,
    text-icu,
    time,
    transformers-compat,
    unordered-containers,
    xmlhtml >= 0.1