Name:                reffit
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable reffit
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.4     && < 5,
    acid-state,
    aeson,
    blaze-html,
    bytestring                >= 0.9.1   && < 0.11,
    base64-bytestring,
    cereal,
    containers,
    cryptonite,
    digestive-functors,
    digestive-functors-heist,
    digestive-functors-snap,
    digestive-functors-blaze,
    errors,
    hashable,
    heist                     >= 1.0     && < 1.1,
    HTTP,
    http-client,
    http-client-tls,
    http-types,
    lens,
    lens-aeson,
    map-syntax,
    mtl                       >= 2       && < 3,
    network,
    network-uri               >= 2.6.0.1 && < 2.7,
    pandoc                                       ,
    safe,
    safecopy,
    serialise,
    snap                      >= 1.1 && < 1.2,
    snap-core,
    snap-server,
    snap-loader-static,
    snaplet-acid-state        >= 0.2.5   && < 0.3,
    text-icu,
    text                      ,
    time                      >= 1.1     && < 1.9,
    transformers,
    unordered-containers,
    wreq,
    xmlhtml

  hs-source-dirs: src
  other-modules:
    Application,
    Reffit.AcidTypes,
    Reffit.CrossRef,
    Reffit.Discussion,
--    Reffit.DocAuthor,
    Reffit.Document,
    Reffit.FieldTag,
    Reffit.Filter,
    Reffit.Handlers,
--    Reffit.Handlers.Document,
    Reffit.Handlers.HandleAuthentication,
    Reffit.Handlers.HandleDiscussion,
    Reffit.Handlers.HandleIndex,
    Reffit.Handlers.HandleNewDocClass,
    Reffit.Handlers.HandleNewOComment,
    Reffit.Handlers.HandleNewPaper,
    Reffit.Handlers.HandleNewSummary,
    Reffit.Handlers.HandlePasswordReset,
    Reffit.Handlers.HandleSummaryVote,
    Reffit.Handlers.HandleViewPaper,
    Reffit.Handlers.HandleViewUser,
--    Reffit.HashTag,
    Reffit.Markdown,
    Reffit.OverviewComment,
    Reffit.PaperRoll,
    Reffit.Scores,
    Reffit.Search,
    Reffit.Sort,
    Reffit.Types,
    Reffit.User
    Site
    Util.Mailgun
    Util.ReffitMigrate
    Util.Snap

  extra-libraries: icuuc
  if os(mingw32)
    extra-libraries: icuin icudt
  else
    extra-libraries: icui18n icudata

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
